--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,6 @@ body,
 
 .App {
   min-height: 100%;
-  overflow-x: hidden;
-  position: relative;
 
   display: flex;
   flex-direction: column;
@@ -19,6 +17,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
+  overflow-y: auto;
 }
 
 /*
