--- a/src/info/BandInfo.css
+++ b/src/info/BandInfo.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-around;
 
-    position: absolute;
+    position: fixed;
     width: 100%;
     background-color: white;
     border-bottom: 1px black solid;
